--- a/capsul/ui/templates/engine.html
+++ b/capsul/ui/templates/engine.html
@@ -25,8 +25,11 @@
 <script>
   function set_engine_status(engine_status) {
     let status_table = document.getElementById("status_table");
-    for (const [name, value] of Object.entries(engine_status)) {
+    for (let [name, value] of Object.entries(engine_status)) {
       let tr = document.createElement("tr");
+      if (typeof value === 'object' && value !== null) {
+        value = '<pre>' + JSON.stringify(value, undefined, 2) + '</pre>';
+      }
       tr.innerHTML = '<tr><th>' + name + '</th><td>' + value + '</td></tr>'
       status_table.appendChild(tr);
     }
